# my-agents

deposit-rate-benchmarker/: app.js  (+6 more)
kalshi-trading-bot/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  beast_mode_bot.py  beast_mode_dashboard.py  cli.py  env.template  paper_trader.py  pyproject.toml  requirements.txt  setup.py  test_live_mode.py  verify_fix.py
kalshi-trading-bot/docs/: DASHBOARD.md  PERFORMANCE_SYSTEM.md  QUICK_FLIP_STRATEGY.md  paper_dashboard.html
kalshi-trading-bot/scripts/: analyze_performance.py  beast_mode_dashboard.py  cost_monitor.py  extract_grok_analysis.py  fix_database_schema.py  get_positions.py  init_database.py  install_beast_mode.py  launch_dashboard.py  performance_analysis.py  performance_system_manager.py  portfolio_health_check.py  quick_performance_analysis.py  run_dashboard_setup.py  sync_positions.py  test_automated_analyzer.py  test_performance_analyzer.py  test_quick_flip_strategy.py  trading_dashboard.py  view_strategy_performance.py
kalshi-trading-bot/src/: __init__.py
kalshi-trading-bot/src/agents/: __init__.py  base_agent.py  bear_researcher.py  bull_researcher.py  debate.py  ensemble.py  forecaster_agent.py  news_analyst_agent.py  risk_manager_agent.py  trader_agent.py
kalshi-trading-bot/src/clients/: __init__.py  kalshi_client.py  kalshi_ws.py  model_router.py  openai_client.py  openrouter_client.py  xai_client.py
kalshi-trading-bot/src/config/: __init__.py  settings.py
kalshi-trading-bot/src/data/: __init__.py  news_aggregator.py  sentiment_analyzer.py
kalshi-trading-bot/src/events/: __init__.py  event_bus.py
kalshi-trading-bot/src/jobs/: automated_performance_analyzer.py  decide.py  evaluate.py  execute.py  ingest.py  performance_analyzer.py  performance_dashboard_integration.py  performance_scheduler.py  track.py  trade.py
kalshi-trading-bot/src/paper/: __init__.py  dashboard.py  tracker.py
kalshi-trading-bot/src/strategies/: __init__.py  category_scorer.py  market_making.py  portfolio_enforcer.py  portfolio_optimization.py  quick_flip_scalping.py  safe_compounder.py  unified_trading_system.py
kalshi-trading-bot/src/utils/: __init__.py  cash_reserves.py  database.py  edge_filter.py  logging_setup.py  position_limits.py  prompts.py  stop_loss_calculator.py
kalshi-trading-bot/tests/: test_agents.py  test_database.py  test_decide.py  test_direct_order_placement.py  test_end_to_end.py  test_ensemble.py  test_execute.py  test_helpers.py  test_issue9_price_field_fix.py  test_live_order_execution.py  test_openrouter_client.py  test_real_order_placement.py  test_track.py
kalshi-trading-bot/tests/fixtures/: markets.json
(+72 files in other folders)
