[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kalshi-ai-trading-bot"
version = "2.0.0"
description = "Multi-model AI trading bot for Kalshi prediction markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Kalshi AI Trading Bot Contributors"},
]
keywords = [
    "kalshi",
    "trading",
    "prediction-markets",
    "ai",
    "machine-learning",
    "multi-agent",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx==0.27.0",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    "aiosqlite==0.19.0",
    "cryptography==42.0.0",
    "pycryptodome==3.20.0",
    "openai==1.51.2",
    "anthropic",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
    "python-dotenv==1.0.0",
    "pydantic==2.8.2",
    "pydantic-settings",
    "structlog==23.2.0",
    "typing-extensions>=4.11",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "ratelimit==2.2.1",
    "pyyaml==6.0.1",
    "sentry-sdk==1.39.2",
    "xai_sdk>=1.0.0",
    "uvicorn",
    "json-repair",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "isort==5.13.2",
    "mypy",
]
dashboard = [
    "streamlit",
    "plotly",
]

[project.scripts]
kalshi-bot = "cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/kalshi-ai-trading-bot"
Repository = "https://github.com/yourusername/kalshi-ai-trading-bot"
Issues = "https://github.com/yourusername/kalshi-ai-trading-bot/issues"

[tool.setuptools]
py-modules = ["cli", "beast_mode_bot", "beast_mode_dashboard"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
